--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,13 @@ services:
     volumes:
       - ${VIDEO_DOWNLOAD_PATH}:/app/data/videos
       - ${MUSIC_DOWNLOAD_PATH}:/app/data/music
+      - /home/kahuna/docker/gruvetube/requirements.txt:/app/requirements.txt
     networks:
       - gruvetube_network
     depends_on:
       - db
     command: >
-      sh -c "pip install -r requirements.txt &&
+      sh -c "pip install -r /app/requirements.txt &&
              python src/app.py"
 
 networks:
