--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,16 +21,17 @@ services:
     env_file: .env
     ports:
       - "${DOCKER_PORT}:5000"
+    working_dir: /app
     volumes:
+      - /home/kahuna/docker/gruvetube:/app:rw
       - ${VIDEO_DOWNLOAD_PATH}:/app/data/videos
       - ${MUSIC_DOWNLOAD_PATH}:/app/data/music
-      - /home/kahuna/docker/gruvetube/requirements.txt:/app/requirements.txt
     networks:
       - gruvetube_network
     depends_on:
       - db
     command: >
-      sh -c "pip install -r /app/requirements.txt &&
+      sh -c "pip install -r requirements.txt &&
              python src/app.py"
 
 networks:
